--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang=""en">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <header>
     <h1>Bankole Abdulkareem</h1>
-    <img src="Black Gold Vintage Luxury Jewelry Logo.png" alt="my logo" width="200"height="150">
+    <img id="logo" src="Black Gold Vintage Luxury Jewelry Logo.png" alt="my logo" width="200"height="150">
     <nav>
         <a href="#About">About</a>
         <a href="#Skills">Skills</a>
@@ -19,7 +20,7 @@
     <!--About Section-->
      <section>
         <h2 id="About">About</h2>
-        <p>I am a passionate and dedicated web development student at Skillhints, committed to mastering the art of creating responsive, user-friendly, and functional websites. With a strong foundation in HTML, CSS, and JavaScript, I continuously seek to expand my knowledge in frontend and backend development, including working with frameworks and databases. I enjoy problem-solving, learning new programming techniques, and applying them in real-world projects. My goal is to become a full-stack developer capable of building scalable and innovative digital solutions. Outside coding, I enjoy reading tech blogs, exploring new software tools, and collaborating with fellow learners on creative web projects.
+        <p id="Bio">I am a passionate and dedicated web development student at Skillhints, committed to mastering the art of creating responsive, user-friendly, and functional websites. With a strong foundation in HTML, CSS, and JavaScript, I continuously seek to expand my knowledge in frontend and backend development, including working with frameworks and databases. I enjoy problem-solving, learning new programming techniques, and applying them in real-world projects. My goal is to become a full-stack developer capable of building scalable and innovative digital solutions. Outside coding, I enjoy reading tech blogs, exploring new software tools, and collaborating with fellow learners on creative web projects.
 </p>
         <figure>
    <img src="WhatsApp Image 2025-05-13 at 14.54.41_9fcbb1e8.jpg" alt="My profile Picture" width="250"height="250">
@@ -43,63 +44,62 @@
                 <td>Intermediate</td>
                 <td>6Months</td>
             </tr>
-           </tbody>
-           <tbody style="background-color: lightblue;">
             <tr>
                 <td>WordPress & Elementor</td>
                 <td>Advanced</td>
                 <td>1 year</td>
             </tr>
-           </tbody>
-           <tbody style="background-color: lightblue;">
             <tr>
                 <td>Javascript</td>
                 <td>basic</td>
                 <td>2Months</td>
             </tr>
-           </tbody>
-           <tbody style="background-color: lightblue;">
             <tr>
                 <td>Version Control (Git & GitHub)</td>
                 <td>Intermediate</td>
                 <td>5Months</td>
             </tr>
-           </tbody>
-           <tbody style="background-color: lightblue;">
             <tr>
                 <td>Responsive Design & Media Queries</td>
                 <td>Basic</td>
                 <td>3Months</td>
             </tr>
-           </tbody>
         </table>
         </section>
        <!--Project Section-->
        <section>
         <h2 id="Projects">My Projects Gallery</h2>
         <ul>
-            <li>Project 1</li>
-            <p><img src="cee8ad53-8406-4e30-bbdc-62c6e77d3781.png" alt="Project1" width="250" height="300"></p>
+            <li>
+                <p>Project 1</p>
+            <img src="cee8ad53-8406-4e30-bbdc-62c6e77d3781.png" alt="Project1" width="250" height="300">
+            </li>
             <p>Jnews</p>
             <p>This is a Blog website that contains America News</p>
             <p><a href="https://jnews.wuaze.com/?i=1" target="_blank">JNews</a></p>
-            <li>Project 2</li>
-            <p><img src="eddf0d27-e703-4b90-a6a9-794dba413859.png" alt="Project 2" width="250" height="300"></p>
+            <li>
+                <p>Project 2</p>
+            <img src="eddf0d27-e703-4b90-a6a9-794dba413859.png" alt="Project 2" width="250" height="300">
+            </li>
             <p>Construction</p>
             <p>This is Construction Website that shows some projects that have been done by the company</p>
             <p><a href="https://construction-abdkareem-blog.social-networking.me/" target="_blank">Construction site</a></p>
-            <li>Project 3</li>
-            <p><img src="58a1b543-45f9-49bc-91aa-dbe83c26afb7.png" alt="Project 3" width="250"height="300"></p>
+            <li>
+                <p>Project 3</p>
+            <img src="58a1b543-45f9-49bc-91aa-dbe83c26afb7.png" alt="Project 3" width="250"height="300"></li>
             <p>D-Pride</p>
             <p>This site is a Hotel Website that shows all the facilities of the hotel</p>
             <p><a href="http://dpridehotels.42web.io/?i=1" target="_blank">D-pride</a></p>
-            <li>Project 4</li>
-            <p><img src="9c35a4b4-2266-49f4-9729-c58d4289f05b.png" alt="Project 4" width="250" height="300"></p>
+            <li>
+                <p>Project 4</p>
+            <img src="9c35a4b4-2266-49f4-9729-c58d4289f05b.png" alt="Project 4" width="250" height="300"></li>
             <p>Minaret University Ikirun</p>
             <p>This is the University website located at Ikirun</p>
             <p><a href="http://minaretinternationaluniversity.42web.io/?i=1" target="_blank">Minaret</a></p>
-            <li>Project 5</li>
-            <p><img src="be48d1e0-0f30-4f51-8df9-b9a13081e975.png" alt="Project 5" width="250" height="300"></p>
+            <li>
+                <p>Project 5</p>
+            <img src="be48d1e0-0f30-4f51-8df9-b9a13081e975.png" alt="Project 5" width="250" height="300">
+            </li>
             <p>All Citizenschurch</p>
             <p>This website is a Church Website</p>
             <p><a href="https://www.allcitizenschurch.org/" target="_blank">Allcitizenschurch</a></p>
@@ -114,7 +114,7 @@
        </section>
        <!--Contact Section-->
        <section>
-        <h2 id="Contact">Contact Me</h2>
+        <h2 id="contact">Contact Me</h2>
          <form>
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
@@ -143,14 +143,14 @@
                <label for="terms">I agree to the terms and conditions</label><br>
               <button type="submit">Submit</button>
          </form>
+         </section>
          <footer>
             <p>Follow me on social media:</p>
             <ul>
                 <li><a href="https://www.facebook.com/abdulkareem.bankole.5" target="_blank">Facebook</a></li>
                 <li><a href="https://twitter.com/AbdulkareemBanko" target="_blank">Twitter</a></li>
                 <li><a href="https://www.instagram.com/abdulkareem_bankole/" target="_blank">Instagram</a></li>
-                <p>&copy; 2025 Bankole Abdulkareem.copyright.</p>
+                <p id="copy">&copy; 2025 Bankole Abdulkareem.copyright.</p>
          </footer>
-       </section>
      </body>
 </html>
